--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "keywords": [
     "jupyter",
     "jupyterlab",
-    "jupyterlab-extension",
     "widgets"
   ],
   "files": [
@@ -29,24 +28,14 @@
     "url": "https://github.com/github_organization_name/github_project_name"
   },
   "scripts": {
-    "build": "yarn run build:lib && yarn run build:nbextension && yarn run build:labextension:dev",
-    "build:prod": "yarn run build:lib && yarn run build:nbextension && yarn run build:labextension",
-    "build:labextension": "jupyter labextension build .",
-    "build:labextension:dev": "jupyter labextension build --development True .",
+    "build": "yarn run build:lib && yarn run build:nbextension",
     "build:lib": "tsc",
     "build:nbextension": "webpack",
-    "clean": "yarn run clean:lib && yarn run clean:nbextension && yarn run clean:labextension",
-    "clean:lib": "rimraf lib",
-    "clean:labextension": "rimraf python_package_name/labextension",
-    "clean:nbextension": "rimraf python_package_name/nbextension/static/index.js",
-    "lint": "eslint . --ext .ts,.tsx --fix",
-    "lint:check": "eslint . --ext .ts,.tsx",
+    "clean": "rimraf lib",
     "prepack": "yarn run build:lib",
-    "test": "jest",
     "watch": "npm-run-all -p watch:*",
     "watch:lib": "tsc -w",
-    "watch:nbextension": "webpack --watch --mode=development",
-    "watch:labextension": "jupyter labextension watch ."
+    "watch:nbextension": "webpack --watch --mode=development"
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.1.10 || ^2.0.0 || ^3.0.0 || ^4.0.0"
@@ -54,21 +43,11 @@
   "devDependencies": {
     "@babel/core": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
-    "@jupyterlab/builder": "^3.0.0",
-    "@phosphor/application": "^1.6.0",
-    "@phosphor/widgets": "^1.6.0",
-    "@types/jest": "^26.0.0",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
     "acorn": "^7.2.0",
     "css-loader": "^3.2.0",
-    "eslint": "^7.4.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "fs-extra": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.0.0",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.3",
     "prettier": "^2.0.5",
@@ -80,15 +59,5 @@
     "typescript": "~4.1.3",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.0.0"
-  },
-  "jupyterlab": {
-    "extension": "lib/plugin",
-    "outputDir": "python_package_name/labextension/",
-    "sharedPackages": {
-      "@jupyter-widgets/base": {
-        "bundled": false,
-        "singleton": true
-      }
-    }
   }
 }
